# ai-agent-service

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  tailwind.config.js
.github/workflows/: docker-publish.yml
backend/: .env.example  Dockerfile  README.md  __init__.py  __main__.py  api.py  app_logging.py  config.py  pyproject.toml  requirements.txt  schemas.py  search.py  services.py  start.py  test_backend.sh
docs/: CHANGES.md  DOCKER.md  DOCKER_TROUBLESHOOTING.md  INTEGRATION.md
frontend/: Dockerfile  nginx.conf  package-lock.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: index.css  types.ts
frontend/src/components/: AIAgent.ts  ChatBot.tsx  WelcomeMessage.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/services/: apiService.ts
scripts/: docker-build-push.sh
src/: App.tsx  index.css
src/components/: ChatBot.tsx  MessageBubble.tsx  TypingIndicator.tsx  WelcomeMessage.tsx
src/services/: apiService.ts  storageService.ts
